fixed top bar on mobile

--- a/app/assets/stylesheets/item.css.scss
+++ b/app/assets/stylesheets/item.css.scss
@@ -383,8 +383,15 @@ h1, h2{
       background-position: 50% 50%;
       float: left;
       margin: 10px;
+      .info {
+        background: rgba(197, 157, 94, 0.85);
+        height: 280px;
+        width: 250px;
+        padding: 20px 25px 0px 25px;
+        position: relative;
       }
     }
+  }
 
     .sidebar {
       width: 290px;
@@ -549,6 +556,9 @@ h1, h2{
     }
     .top-bar {
       height: 28px;
+      width: 100%;
+      position: fixed;
+      top: 0;
     }
     .top-bar .top-bar-content {
       margin-left: 0px;
@@ -566,14 +576,16 @@ h1, h2{
       background: #ecebe9;
       width: 85%;
       text-align: center;
-      position: relative;
+      position: fixed;
+      top: 28px;
+
     }
     .menu {
       background: #cbcac9;
       width: 15%;
       height: 60px;
       text-align: center;
-      position: absolute;
+      position: fixed;
       top: 28px;
       right: 0;
       }
@@ -663,15 +675,6 @@ h1, h2{
       background-position: 50% 50%;
       float: left;
       margin: 20px 0;
-      .info {
-        @include transition(all 0.4s ease);
-        @include opacity(0);
-        background: rgba(197, 157, 94, 0.85);
-        height: 270px;
-        width: 250px;
-        padding: 20px 20px 0px 20px;
-        position: relative;
-      }
     }
   }
 
@@ -710,7 +713,8 @@ h1, h2{
     background: #ecebe9;
     width: 85%;
     text-align: center;
-    position: relative;
+    position: fixed;
+    top: 28px;
   }
 
   .menu {
@@ -718,8 +722,8 @@ h1, h2{
     width: 15%;
     height: 50px;
     text-align: center;
-    position: absolute;
-    top: 0;
+    position: fixed;
+    top: 28px;
     right: 0;
   }
 
@@ -742,7 +746,8 @@ h1, h2{
   .content {
     margin-left: auto;
     margin-right: auto;
-    padding-bottom: 10%
+    padding-bottom: 10%;
+    padding-top: 12%;
   }
   .sidebar-top{
     margin-left: -39px;
@@ -758,7 +763,20 @@ h1, h2{
     font-size: 18px;
   }
   .top-bar {
-    display: none;
+    height: 28px;
+    width: 100%;
+    position: fixed;
+    top: 0;
+  }
+  .top-bar .top-bar-content {
+    margin-left: 0px;
+    color: #C59D5E;
+    text-align: center;
+    font-size: .5em;
+    font-weight: lighter;
+    line-height: 30px;
+    text-transform: uppercase;
+    letter-spacing: 2px;
   }
 
   .slogan {
